iniciando projeto config

--- a/index.html
+++ b/index.html
@@ -8,17 +8,28 @@
     <title>bokuto</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Olá mundo!</h1>
-    </div>
-    <div class="container"></div>
+    <div class="config">
+        
+    </div><!-- 28042010 -->
 
-    <h1>Olá mundo!</h1>
-    <h1>Olá mundo!</h1>
-    <h1>Olá mundo!</h1>
-    <h1>Olá mundo!</h1>
-    <h1>Olá mundo!</h1>
-    <h1>Olá mundo!</h1>
+    <div class="conteudo">
+        <div id="open"></div>
+
+        <div class="textC">
+            <div class="text-container">
+                <div class="text-wraper">
+                    <h3>bokuto</h3>
+                    <p>Koutarou Bokuto, capitão e ace de Fukurodani em Haikyuu!!, é um dos "Cinco Melhores Aces" do Japão. Ele é talentoso, mas enfrenta flutuações emocionais que afetam seu jogo. Com a ajuda de seus colegas, especialmente Akaashi, ele supera esses desafios.Koutarou Bokuto, capitão e ace de Fukurodani em Haikyuu!!, é um dos "Cinco Melhores Aces" do Japão. Ele é talentoso, mas enfrenta flutuações emocionais que afetam seu jogo. Com a ajuda de seus colegas, especialmente Akaashi, ele supera esses desafios.Koutarou Bokuto, capitão e ace de Fukurodani em Haikyuu!!, é um dos "Cinco Melhores Aces" do Japão. Ele é talentoso, mas enfrenta flutuações emocionais que afetam seu jogo. Com a ajuda de seus colegas, especialmente Akaashi, ele supera esses desafios.</p>
+                </div>
+
+                <div class="text-wraper">
+                    <h3>tendou</h3>
+                    <p>Satori Tendou é o bloqueador central do time de vôlei Shiratorizawa em Haikyuu!!. Conhecido como o "Bloqueador Guiness", ele tem uma personalidade excêntrica e imprevisível, o que dificulta para os adversários preverem seus bloqueios. Apesar de sofrer bullying na infância por seu jeito estranho, Tendou encontra confiança e alegria no vôlei.Satori Tendou é o bloqueador central do time de vôlei Shiratorizawa em Haikyuu!!. Conhecido como o "Bloqueador Guiness", ele tem uma personalidade excêntrica e imprevisível, o que dificulta para os adversários preverem seus bloqueios. Apesar de sofrer bullying na infância por seu jeito estranho, Tendou encontra confiança e alegria no vôlei.Satori Tendou é o bloqueador central do time de vôlei Shiratorizawa em Haikyuu!!. Conhecido como o "Bloqueador Guiness", ele tem uma personalidade excêntrica e imprevisível, o que dificulta para os adversários preverem seus bloqueios. Apesar de sofrer bullying na infância por seu jeito estranho, Tendou encontra confiança e alegria no vôlei.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="JS/script.js"></script>
 </html>
+
